<resources>
    <string name="app_name">Shalarm</string>

    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_calibrate">Calibrate</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="nav_alarm_all">All alarms</string>
    <string name="nav_alarm_enabled">Enabled alarms</string>
    <string name="nav_alarm_disabled">Disabled alarms</string>
    <string name="nav_settings">Settings</string>

    <string name="nav_header_next_alarm_at">Next alarm at: </string>
    <string name="nav_header_no_enabled_alarm">Disabled</string>

    <string name="alarm_list_no_alarms">No Alarms</string>

    <string name="action_settings">Settings</string>
    <string name="action_save">Save</string>
    <string name="action_delete">Delete</string>
    <string name="delete_alarm_confirm_message">Delete this alarm?</string>

    <string name="title_activity_add_alarm">AddAlarmActivity</string>
    <string name="title_activity_edit_alarm">EditAlarmActivity</string>

    <string name="alarm_detail_repeat">Repeat</string>
    <string name="alarm_detail_vibrate">Vibrate</string>
    <string name="alarm_detail_ringtone">Ringtone</string>
    <string name="alarm_detail_ringtone_none">None</string>
    <string name="alarm_detail_shake_power">Shake Power:\u0020</string>
    <string name="alarm_detail_shake_power_light">Shake me softly</string>
    <string name="alarm_detail_shake_power_medium">Fully awake</string>
    <string name="alarm_detail_shake_power_hard">No warranty</string>
    <string name="alarm_detail_label_hint">Add label</string>

    <string name="title_activity_alert">AlertActivity</string>

    <string name="cancel_alert">Cancel</string>
    <string name="alert_missed_notification_title">Missed alarm</string>
    <string name="alerting_notification_title">Alarm</string>

    <string name="maximum_shake_power">Maximum shake power: </string>

    <string name="once">Once</string>
    <string name="everyday">Everyday</string>
    <string name="workday">Workdays</string>

    <string name="pref_category_title_shake_detector">Shake Detector</string>
    <string name="pref_title_calibrate">Calibrate</string>
    <string name="pref_category_title_alarm">Alarm</string>
    <string name="pref_title_alert_timeout">Silence after</string>
    <string name="pref_key_alert_timeout" translatable="false">key_alert_timeout</string>

    <string name="calibrate_message">Please shake your device repeatedly as hard as you can until the number below stops increasing, then press the Calibrate button below. Be careful.</string>
    <string name="invalid_calibrate_message">Please shake your device harder to get a bigger Maximum Force first.</string>
    <string name="maximum_force">Maximum Force</string>
    <string name="text_button_calibrate">Calibrate</string>

    <string name="pref_key_max_force" translatable="false">max_force</string>

</resources>
