<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_alarm_all"
            android:icon="@drawable/ic_menu_alarm_24dp"
            android:title="@string/nav_alarm_all" />
        <item
            android:id="@+id/nav_alarm_enabled"
            android:icon="@drawable/ic_menu_alarm_enabled_24dp"
            android:title="@string/nav_alarm_enabled" />
        <item
            android:id="@+id/nav_alarm_disabled"
            android:icon="@drawable/ic_menu_alarm_disabled_24dp"
            android:title="@string/nav_alarm_disabled" />
    </group>

    <group android:id="@+id/group_settings">
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_menu_settings_24dp"
            android:title="@string/nav_settings" />
    </group>

</menu>
